--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DEPLOY_USER="demiz"
+DEPLOY_USER=demiz
 DEPLOY_HOST=84.201.162.24
-DEPLOY_PATH="/home/demiz/web-plus-pm2-deploy/"
+DEPLOY_PATH=/home/demiz/web-plus-pm2-deploy/
 JWT_SECRET="JWT_SECRET"
 NODE_ENV=production
